--- a/react/00-practice-app/package.json
+++ b/react/00-practice-app/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer":"10.4.13",
+    "postcss": "^8.4.19",
     "gh-pages": "^4.0.0",
     "tailwindcss": "^3.2.4"
   }
